# tgbotbase3

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.toml  config_reader.py  dispatcher.py  docker-compose.yml  filters.py  fluent_loader.py  logs.py  pyproject.toml  requirements.txt  utils.py
db/: __init__.py  base.py  memory.py  sqlite.py
filters/: __init__.py  chat_type.py  find_usernames.py  is_admin.py  is_owner.py  member_can_restrict.py
handlers/: __init__.py  admin_actions.py  callbacks.py  exceptions.py  group_events.py  personal_actions.py  user_actions.py
keyboards/: __init__.py  confirm.py  pagination.py
l10n/: en.ftl  locale.ftl  ru.ftl
middlewares/: __init__.py  localization.py  throttling.py  weekend.py
